--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    max-height: 50vmin;
+    pointer-events: none;
+    margin-bottom: 12px;
+    margin-top: 12px;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #0f344b;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1,
+h2,
+h3,
+p {
+    margin: 0 auto;
+}
+
+h1 {
+    margin-top: 6px;
+    margin-bottom: 6px;
+    font-size: 1.75em;
+}
+
+h2 {
+    margin-bottom: 28px;
+    font-size: 1em;
+}
+
+p {
+    margin-top: 12px;
+    margin-bottom: 12px;
+    font-size: 1em;
+}
+
+a:visited {
+    color: white;
+}
+
+a {
+    text-decoration: none;
+}
+
+.socials-logo {
+    width: 32px;
+}
+
+.socials-container {
+    display: flex;
+}
+
+.socials-col {
+    margin-left: 16px;
+    margin-right: 16px;
+}
+
+.privacy {
+    font-size: .5em;
+    margin-top: 48px;
 }
